# TG-EqF-VN-200

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  Symmetry.py  main.cpp
Inc/: EqFalgo.hpp  EqFlogger.hpp  EqFparser.hpp  SE23xse23.hpp  VectorNav.hpp  linalgtypes.hpp  utils.hpp
Src/: EqFalgo.cpp  EqFlogger.cpp  EqFparser.cpp  SE23xse23.cpp  VectorNav.cpp  utils.cpp
analysis/: _plot_common.py  plot_accel_xyz.py  plot_all.py  plot_angle_axis.py  plot_frobenius.py  plot_pos_ned.py  plot_rotation_matrix.py  plot_vel_ned.py
log/: Measurements.csv  Measurements_5.csv  Measurements_50.csv  Measurements_baro_and_gnss.csv  Measurements_onlybaromeas.csv  Measurements_still.csv  Measurements_walking.csv  TGEqFEstimate.csv  TGEqFEstimate_b_nu_eq_nu.csv  TGEqFEstimate_b_nu_eq_nu_still.csv  TGEqFEstimate_b_nu_neq_nu_still.csv  TGEqFEstimate_b_nu_neq_nu_walking.csv  TGEqFEstimate_baro_and_gnss.csv  TGEqFEstimate_no_reset_5.csv  TGEqFEstimate_no_reset_50.csv  TGEqFEstimate_no_reset_still.csv  TGEqFEstimate_onlybaromeas.csv  TGEqFEstimate_reset_5.csv  TGEqFEstimate_reset_50.csv  TGEqFEstimate_reset_still.csv  VNEstimate.csv  VNEstimate_5.csv  VNEstimate_50.csv  VNEstimate_onlybaromeas.csv  VNEstimate_still.csv  VNEstimate_walking.csv  fronebius_5.csv  fronebius_50.csv  fronebius_still.csv
references/: SE23_se23_EqF.py  System.py
